tests/error/construct/to_mutch_arg.mml
type s = 
  | Some of int * int

Some (2, 2, 2)
